@@ -8,6 +8,7 @@ install_requires = [
     'zope.component',
     'zope.i18n >= 3.5',
     'zope.traversing',
+    'zope.contentprovider',
     ]
 
 if sys.version_info[:3] < (2,5,0):
